Fix border overlapping at corners due to translucency

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ td {
   padding: 20px;
   cursor: pointer;
   transition: all .5s ease-in-out;
-  border: solid 1px rgba(255,0,0,50%);
+  border: solid 1px rgba(75%,40%,40%,100%);
 }
 td::selection {
   /*This existing, even empty, prevents highlighting the text
